Replace usages of `org.json` with Jackson
Co-authored-by: Walter de Boer <walterdeboer@dbso.nl>
Signed-off-by: nscuro <nscuro@protonmail.com>